1060/a/parser.output
Grammar

    0 $accept: Program $end

    1 Program: Program Naredba
    2        | Naredba

    3 Naredba: id_token '=' '{' NizBrojeva '}' ';'
    4        | id_token '=' num_token oddo_token num_token ';'
    5        | print_token id_token ';'

    6 NizBrojeva: NizBrojeva ',' num_token
    7           | num_token


Terminals, with rules where they appear

$end (0) 0
',' (44) 6
';' (59) 3 4 5
'=' (61) 3 4
'{' (123) 3
'}' (125) 3
error (256)
num_token (258) 4 6 7
id_token (259) 3 4 5
oddo_token (260) 4
print_token (261) 5


Nonterminals, with rules where they appear

$accept (12)
    on left: 0
Program (13)
    on left: 1 2, on right: 0 1
Naredba (14)
    on left: 3 4 5, on right: 1 2
NizBrojeva (15)
    on left: 6 7, on right: 3 6


State 0

    0 $accept: . Program $end

    id_token     shift, and go to state 1
    print_token  shift, and go to state 2

    Program  go to state 3
    Naredba  go to state 4


State 1

    3 Naredba: id_token . '=' '{' NizBrojeva '}' ';'
    4        | id_token . '=' num_token oddo_token num_token ';'

    '='  shift, and go to state 5


State 2

    5 Naredba: print_token . id_token ';'

    id_token  shift, and go to state 6


State 3

    0 $accept: Program . $end
    1 Program: Program . Naredba

    $end         shift, and go to state 7
    id_token     shift, and go to state 1
    print_token  shift, and go to state 2

    Naredba  go to state 8


State 4

    2 Program: Naredba .

    $default  reduce using rule 2 (Program)


State 5

    3 Naredba: id_token '=' . '{' NizBrojeva '}' ';'
    4        | id_token '=' . num_token oddo_token num_token ';'

    num_token  shift, and go to state 9
    '{'        shift, and go to state 10


State 6

    5 Naredba: print_token id_token . ';'

    ';'  shift, and go to state 11


State 7

    0 $accept: Program $end .

    $default  accept


State 8

    1 Program: Program Naredba .

    $default  reduce using rule 1 (Program)


State 9

    4 Naredba: id_token '=' num_token . oddo_token num_token ';'

    oddo_token  shift, and go to state 12


State 10

    3 Naredba: id_token '=' '{' . NizBrojeva '}' ';'

    num_token  shift, and go to state 13

    NizBrojeva  go to state 14


State 11

    5 Naredba: print_token id_token ';' .

    $default  reduce using rule 5 (Naredba)


State 12

    4 Naredba: id_token '=' num_token oddo_token . num_token ';'

    num_token  shift, and go to state 15


State 13

    7 NizBrojeva: num_token .

    $default  reduce using rule 7 (NizBrojeva)


State 14

    3 Naredba: id_token '=' '{' NizBrojeva . '}' ';'
    6 NizBrojeva: NizBrojeva . ',' num_token

    '}'  shift, and go to state 16
    ','  shift, and go to state 17


State 15

    4 Naredba: id_token '=' num_token oddo_token num_token . ';'

    ';'  shift, and go to state 18


State 16

    3 Naredba: id_token '=' '{' NizBrojeva '}' . ';'

    ';'  shift, and go to state 19


State 17

    6 NizBrojeva: NizBrojeva ',' . num_token

    num_token  shift, and go to state 20


State 18

    4 Naredba: id_token '=' num_token oddo_token num_token ';' .

    $default  reduce using rule 4 (Naredba)


State 19

    3 Naredba: id_token '=' '{' NizBrojeva '}' ';' .

    $default  reduce using rule 3 (Naredba)


State 20

    6 NizBrojeva: NizBrojeva ',' num_token .

    $default  reduce using rule 6 (NizBrojeva)
